dataset1235/2025-2/2947369575/users/3324069804/executions/1003782500_2383239197.log
== SUBMISSION (2025-09-01 21:59:24)
-- CODE: 
import math
a= float(input("digite o tamanho de a:"))
b= float(input("digite o tamanho de b:"))
gama= float(input("digite o tamanho de gama:"))
cos= math.cos(math.radians(gama))
c= math.sqrt((a**2)+(b**2)-2*a*b*cos)
print(round(c,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
---- user output:
digite o tamanho de a:digite o tamanho de b:digite o tamanho de gama:87.54
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
---- user output:
digite o tamanho de a:digite o tamanho de b:digite o tamanho de gama:16.42
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
digite o tamanho de a:digite o tamanho de b:digite o tamanho de gama:17.14
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
---- user output:
digite o tamanho de a:digite o tamanho de b:digite o tamanho de gama:1.88
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
---- user output:
digite o tamanho de a:digite o tamanho de b:digite o tamanho de gama:54.43
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
---- user output:
digite o tamanho de a:digite o tamanho de b:digite o tamanho de gama:9.17
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 21:57:07)
-- CODE: 
import math
a= float(input("digite o tamanho de a:"))
b= float(input("digite o tamanho de b:"))
gama= float(input("digite o tamanho de gama:"))
gama_rad= math.radians(gama)
c= math.sqrt (a**2 + b**8- 2*a*b* math.cos(gama_rad))
print(round(c,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
---- user output:
digite o tamanho de a:digite o tamanho de b:digite o tamanho de gama:97621513.73
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
---- user output:
digite o tamanho de a:digite o tamanho de b:digite o tamanho de gama:87521.31
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
digite o tamanho de a:digite o tamanho de b:digite o tamanho de gama:230025.75
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
---- user output:
digite o tamanho de a:digite o tamanho de b:digite o tamanho de gama:279.81
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
---- user output:
digite o tamanho de a:digite o tamanho de b:digite o tamanho de gama:97.55
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
---- user output:
digite o tamanho de a:digite o tamanho de b:digite o tamanho de gama:10000.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 21:54:44)
-- CODE: 
import math
a= float(input("digite o tamanho de a:"))
b= float(input("digite o tamanho de b:"))
gama= float(input("digite o tamanho de gama:"))
gama_rad= math.radians(gama)
c= math.sqrt (a**2 + b**8- 2*ab* math.cos(gama_rad))
print(round(c,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    c= math.sqrt (a**2 + b**8- 2*ab* math.cos(gama_rad))
                                 ^^
NameError: name 'ab' is not defined. Did you mean: 'a'?
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    c= math.sqrt (a**2 + b**8- 2*ab* math.cos(gama_rad))
                                 ^^
NameError: name 'ab' is not defined. Did you mean: 'a'?
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    c= math.sqrt (a**2 + b**8- 2*ab* math.cos(gama_rad))
                                 ^^
NameError: name 'ab' is not defined. Did you mean: 'a'?
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    c= math.sqrt (a**2 + b**8- 2*ab* math.cos(gama_rad))
                                 ^^
NameError: name 'ab' is not defined. Did you mean: 'a'?
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    c= math.sqrt (a**2 + b**8- 2*ab* math.cos(gama_rad))
                                 ^^
NameError: name 'ab' is not defined. Did you mean: 'a'?
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    c= math.sqrt (a**2 + b**8- 2*ab* math.cos(gama_rad))
                                 ^^
NameError: name 'ab' is not defined. Did you mean: 'a'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 21:54:52)
-- CODE: 
import math
a= float(input("digite o tamanho de a:"))
b= float(input("digite o tamanho de b:"))
gama= float(input("digite o tamanho de gama:"))
gama_rad= math.radians(gama)
c= math.sqrt (a**2 + b**8- 2*ab* math.cos(gama_rad))
print(round(c,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    c= math.sqrt (a**2 + b**8- 2*ab* math.cos(gama_rad))
                                 ^^
NameError: name 'ab' is not defined. Did you mean: 'a'?
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    c= math.sqrt (a**2 + b**8- 2*ab* math.cos(gama_rad))
                                 ^^
NameError: name 'ab' is not defined. Did you mean: 'a'?
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    c= math.sqrt (a**2 + b**8- 2*ab* math.cos(gama_rad))
                                 ^^
NameError: name 'ab' is not defined. Did you mean: 'a'?
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    c= math.sqrt (a**2 + b**8- 2*ab* math.cos(gama_rad))
                                 ^^
NameError: name 'ab' is not defined. Did you mean: 'a'?
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    c= math.sqrt (a**2 + b**8- 2*ab* math.cos(gama_rad))
                                 ^^
NameError: name 'ab' is not defined. Did you mean: 'a'?
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    c= math.sqrt (a**2 + b**8- 2*ab* math.cos(gama_rad))
                                 ^^
NameError: name 'ab' is not defined. Did you mean: 'a'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 21:57:06)
-- CODE: 
import math
a= float(input("digite o tamanho de a:"))
b= float(input("digite o tamanho de b:"))
gama= float(input("digite o tamanho de gama:"))
gama_rad= math.radians(gama)
c= math.sqrt (a**2 + b**8- 2*a*b* math.cos(gama_rad))
print(round(c,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
---- user output:
digite o tamanho de a:digite o tamanho de b:digite o tamanho de gama:97621513.73
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
---- user output:
digite o tamanho de a:digite o tamanho de b:digite o tamanho de gama:87521.31
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
digite o tamanho de a:digite o tamanho de b:digite o tamanho de gama:230025.75
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
---- user output:
digite o tamanho de a:digite o tamanho de b:digite o tamanho de gama:279.81
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
---- user output:
digite o tamanho de a:digite o tamanho de b:digite o tamanho de gama:97.55
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
---- user output:
digite o tamanho de a:digite o tamanho de b:digite o tamanho de gama:10000.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
